--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 6.17.9 Kernel Configuration
+# Linux/x86 6.18.0 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (GCC) 15.2.1 20251112"
 CONFIG_CC_IS_GCC=y
@@ -18,6 +18,7 @@ CONFIG_CC_HAS_ASM_GOTO_OUTPUT=y
 CONFIG_CC_HAS_ASM_GOTO_TIED_OUTPUT=y
 CONFIG_TOOLS_SUPPORT_RELR=y
 CONFIG_CC_HAS_ASM_INLINE=y
+CONFIG_CC_HAS_ASSUME=y
 CONFIG_CC_HAS_NO_PROFILE_FN_ATTR=y
 CONFIG_CC_HAS_COUNTED_BY=y
 CONFIG_CC_HAS_MULTIDIMENSIONAL_NONSTRING=y
@@ -338,7 +339,6 @@ CONFIG_ARCH_HIBERNATION_POSSIBLE=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_AUDIT_ARCH=y
 CONFIG_HAVE_INTEL_TXT=y
-CONFIG_X86_64_SMP=y
 CONFIG_ARCH_SUPPORTS_UPROBES=y
 CONFIG_FIX_EARLYCON_MEM=y
 CONFIG_PGTABLE_LEVELS=5
@@ -387,9 +387,6 @@ CONFIG_NR_CPUS_RANGE_BEGIN=2
 CONFIG_NR_CPUS_RANGE_END=512
 CONFIG_NR_CPUS_DEFAULT=64
 CONFIG_NR_CPUS=8
-CONFIG_SCHED_CLUSTER=y
-CONFIG_SCHED_SMT=y
-CONFIG_SCHED_MC=y
 CONFIG_SCHED_MC_PRIO=y
 CONFIG_X86_LOCAL_APIC=y
 CONFIG_ACPI_MADT_WAKEUP=y
@@ -419,6 +416,7 @@ CONFIG_X86_VSYSCALL_EMULATION=y
 CONFIG_X86_IOPL_IOPERM=y
 CONFIG_MICROCODE=y
 # CONFIG_MICROCODE_LATE_LOADING is not set
+# CONFIG_MICROCODE_DBG is not set
 CONFIG_X86_MSR=y
 CONFIG_X86_CPUID=y
 CONFIG_X86_DIRECT_GBPAGES=y
@@ -687,12 +685,13 @@ CONFIG_KVM_GENERIC_PRE_FAULT_MEMORY=y
 CONFIG_KVM_COMPAT=y
 CONFIG_HAVE_KVM_IRQ_BYPASS=m
 CONFIG_HAVE_KVM_NO_POLL=y
-CONFIG_KVM_XFER_TO_GUEST_WORK=y
+CONFIG_VIRT_XFER_TO_GUEST_WORK=y
 CONFIG_HAVE_KVM_PM_NOTIFIER=y
 CONFIG_KVM_GENERIC_HARDWARE_ENABLING=y
 CONFIG_KVM_GENERIC_MMU_NOTIFIER=y
 CONFIG_KVM_ELIDE_TLB_FLUSH_IF_YOUNG=y
 CONFIG_KVM_MMU_LOCKLESS_AGING=y
+CONFIG_KVM_GUEST_MEMFD=y
 CONFIG_VIRTUALIZATION=y
 CONFIG_KVM_X86=m
 CONFIG_KVM=m
@@ -733,10 +732,6 @@ CONFIG_X86_DISABLED_FEATURE_TDX_GUEST=y
 CONFIG_X86_DISABLED_FEATURE_USER_SHSTK=y
 CONFIG_X86_DISABLED_FEATURE_IBT=y
 CONFIG_X86_DISABLED_FEATURE_SEV_SNP=y
-CONFIG_AS_AVX512=y
-CONFIG_AS_GFNI=y
-CONFIG_AS_VAES=y
-CONFIG_AS_VPCLMULQDQ=y
 CONFIG_AS_WRUSS=y
 CONFIG_ARCH_CONFIGURES_CPU_MITIGATIONS=y
 
@@ -744,6 +739,12 @@ CONFIG_ARCH_CONFIGURES_CPU_MITIGATIONS=y
 # General architecture-dependent options
 #
 CONFIG_HOTPLUG_SMT=y
+CONFIG_ARCH_SUPPORTS_SCHED_SMT=y
+CONFIG_ARCH_SUPPORTS_SCHED_CLUSTER=y
+CONFIG_ARCH_SUPPORTS_SCHED_MC=y
+CONFIG_SCHED_SMT=y
+CONFIG_SCHED_CLUSTER=y
+CONFIG_SCHED_MC=y
 CONFIG_HOTPLUG_CORE_SYNC=y
 CONFIG_HOTPLUG_CORE_SYNC_DEAD=y
 CONFIG_HOTPLUG_CORE_SYNC_FULL=y
@@ -821,7 +822,7 @@ CONFIG_ARCH_SUPPORTS_LTO_CLANG_THIN=y
 CONFIG_LTO_NONE=y
 CONFIG_ARCH_SUPPORTS_AUTOFDO_CLANG=y
 CONFIG_ARCH_SUPPORTS_PROPELLER_CLANG=y
-CONFIG_ARCH_SUPPORTS_CFI_CLANG=y
+CONFIG_ARCH_SUPPORTS_CFI=y
 CONFIG_HAVE_ARCH_WITHIN_STACK_FRAMES=y
 CONFIG_HAVE_CONTEXT_TRACKING_USER=y
 CONFIG_HAVE_CONTEXT_TRACKING_USER_OFFSTACK=y
@@ -893,6 +894,7 @@ CONFIG_ARCH_HAS_HW_PTE_YOUNG=y
 CONFIG_ARCH_HAS_NONLEAF_PMD_YOUNG=y
 CONFIG_ARCH_HAS_KERNEL_FPU_SUPPORT=y
 CONFIG_ARCH_VMLINUX_NEEDS_RELOCS=y
+CONFIG_HAVE_GENERIC_TIF_BITS=y
 
 #
 # GCOV-based kernel profiling
@@ -1039,7 +1041,6 @@ CONFIG_COREDUMP=y
 #
 # Memory Management options
 #
-CONFIG_ZPOOL=y
 CONFIG_SWAP=y
 CONFIG_ZSWAP=y
 # CONFIG_ZSWAP_DEFAULT_ON is not set
@@ -1051,11 +1052,18 @@ CONFIG_ZSWAP_SHRINKER_DEFAULT_ON=y
 # CONFIG_ZSWAP_COMPRESSOR_DEFAULT_LZ4HC is not set
 CONFIG_ZSWAP_COMPRESSOR_DEFAULT_ZSTD=y
 CONFIG_ZSWAP_COMPRESSOR_DEFAULT="zstd"
-CONFIG_ZSWAP_ZPOOL_DEFAULT_ZSMALLOC=y
-CONFIG_ZSWAP_ZPOOL_DEFAULT="zsmalloc"
 CONFIG_ZSMALLOC=y
+
+#
+# Zsmalloc allocator options
+#
+
+#
+# Zsmalloc is a common backend allocator for zswap & zram
+#
 CONFIG_ZSMALLOC_STAT=y
 CONFIG_ZSMALLOC_CHAIN_SIZE=8
+# end of Zsmalloc allocator options
 
 #
 # Slab allocator options
@@ -1104,6 +1112,7 @@ CONFIG_ARCH_SUPPORTS_MEMORY_FAILURE=y
 CONFIG_MEMORY_FAILURE=y
 CONFIG_ARCH_WANT_GENERAL_HUGETLB=y
 CONFIG_ARCH_WANTS_THP_SWAP=y
+# CONFIG_PERSISTENT_HUGE_ZERO_FOLIO is not set
 CONFIG_MM_ID=y
 CONFIG_TRANSPARENT_HUGEPAGE=y
 CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=y
@@ -1180,12 +1189,14 @@ CONFIG_NET_CRC32C=y
 #
 CONFIG_PACKET=y
 # CONFIG_PACKET_DIAG is not set
+# CONFIG_INET_PSP is not set
 CONFIG_UNIX=y
 CONFIG_AF_UNIX_OOB=y
 # CONFIG_UNIX_DIAG is not set
 # CONFIG_TLS is not set
 # CONFIG_XFRM_USER is not set
 # CONFIG_NET_KEY is not set
+# CONFIG_DIBS is not set
 CONFIG_XDP_SOCKETS=y
 # CONFIG_XDP_SOCKETS_DIAG is not set
 CONFIG_INET=y
@@ -1856,6 +1867,7 @@ CONFIG_BLK_DEV_LOOP_MIN_COUNT=0
 # CONFIG_EEPROM_93XX46 is not set
 # CONFIG_EEPROM_IDT_89HPESX is not set
 # CONFIG_EEPROM_EE1004 is not set
+# CONFIG_EEPROM_M24LR is not set
 # end of EEPROM support
 
 # CONFIG_CB710_CORE is not set
@@ -1871,7 +1883,6 @@ CONFIG_BLK_DEV_LOOP_MIN_COUNT=0
 # CONFIG_UACCE is not set
 # CONFIG_PVPANIC is not set
 # CONFIG_KEBA_CP500 is not set
-# CONFIG_AMD_SBRMI_I2C is not set
 # end of Misc devices
 
 #
@@ -2009,11 +2020,10 @@ CONFIG_ATA_BMDMA=y
 # CONFIG_PATA_LEGACY is not set
 CONFIG_MD=y
 # CONFIG_BLK_DEV_MD is not set
-CONFIG_MD_BITMAP_FILE=y
 # CONFIG_BCACHE is not set
 CONFIG_BLK_DEV_DM_BUILTIN=y
 CONFIG_BLK_DEV_DM=m
-CONFIG_DM_DEBUG=y
+# CONFIG_DM_DEBUG is not set
 CONFIG_DM_BUFIO=m
 # CONFIG_DM_DEBUG_BLOCK_MANAGER_LOCKING is not set
 # CONFIG_DM_UNSTRIPED is not set
@@ -2170,10 +2180,9 @@ CONFIG_E1000E_HWTS=y
 # CONFIG_NET_VENDOR_XILINX is not set
 # CONFIG_FDDI is not set
 # CONFIG_HIPPI is not set
-# CONFIG_PHYLIB is not set
-# CONFIG_MICREL_KS8995MA is not set
-# CONFIG_PSE_CONTROLLER is not set
 # CONFIG_MDIO_BUS is not set
+# CONFIG_PHYLIB is not set
+# CONFIG_PSE_CONTROLLER is not set
 
 #
 # PCS device drivers
@@ -2279,7 +2288,6 @@ CONFIG_INPUT_KEYBOARD=y
 # CONFIG_KEYBOARD_QT2160 is not set
 # CONFIG_KEYBOARD_DLINK_DIR685 is not set
 # CONFIG_KEYBOARD_LKKBD is not set
-# CONFIG_KEYBOARD_TCA6416 is not set
 # CONFIG_KEYBOARD_TCA8418 is not set
 # CONFIG_KEYBOARD_LM8323 is not set
 # CONFIG_KEYBOARD_LM8333 is not set
@@ -2309,6 +2317,7 @@ CONFIG_INPUT_MOUSE=y
 # CONFIG_INPUT_TOUCHSCREEN is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
+# CONFIG_INPUT_AW86927 is not set
 # CONFIG_INPUT_BMA150 is not set
 # CONFIG_INPUT_E3X0_BUTTON is not set
 # CONFIG_INPUT_PCSPKR is not set
@@ -2689,6 +2698,7 @@ CONFIG_HWMON=y
 # CONFIG_SENSORS_GIGABYTE_WATERFORCE is not set
 # CONFIG_SENSORS_GL518SM is not set
 # CONFIG_SENSORS_GL520SM is not set
+# CONFIG_SENSORS_GPD is not set
 # CONFIG_SENSORS_G760A is not set
 # CONFIG_SENSORS_G762 is not set
 # CONFIG_SENSORS_HIH6130 is not set
@@ -3001,6 +3011,7 @@ CONFIG_MFD_CORE=m
 # CONFIG_MFD_MT6370 is not set
 # CONFIG_MFD_MT6397 is not set
 # CONFIG_MFD_MENF21BMC is not set
+# CONFIG_MFD_NCT6694 is not set
 # CONFIG_MFD_OCELOT is not set
 # CONFIG_EZX_PCAP is not set
 # CONFIG_MFD_VIPERBOARD is not set
@@ -3018,6 +3029,7 @@ CONFIG_MFD_CORE=m
 # CONFIG_MFD_LP3943 is not set
 # CONFIG_MFD_LP8788 is not set
 # CONFIG_MFD_TI_LMU is not set
+# CONFIG_MFD_BQ257XX is not set
 # CONFIG_MFD_PALMAS is not set
 # CONFIG_TPS6105X is not set
 # CONFIG_TPS6507X is not set
@@ -3047,6 +3059,7 @@ CONFIG_MFD_CORE=m
 # CONFIG_MFD_INTEL_M10_BMC_SPI is not set
 # CONFIG_MFD_QNAP_MCU is not set
 # CONFIG_MFD_UPBOARD_FPGA is not set
+# CONFIG_MFD_MAX7360 is not set
 # end of Multifunction device drivers
 
 CONFIG_REGULATOR=y
@@ -3080,10 +3093,12 @@ CONFIG_REGULATOR_NETLINK_EVENTS=y
 # CONFIG_REGULATOR_MAX20086 is not set
 # CONFIG_REGULATOR_MAX20411 is not set
 # CONFIG_REGULATOR_MAX77826 is not set
+# CONFIG_REGULATOR_MAX77838 is not set
 # CONFIG_REGULATOR_MP8859 is not set
 # CONFIG_REGULATOR_MT6311 is not set
 # CONFIG_REGULATOR_PCA9450 is not set
 # CONFIG_REGULATOR_PF9453 is not set
+# CONFIG_REGULATOR_PF0900 is not set
 # CONFIG_REGULATOR_PV88060 is not set
 # CONFIG_REGULATOR_PV88080 is not set
 # CONFIG_REGULATOR_PV88090 is not set
@@ -3247,6 +3262,7 @@ CONFIG_DRM_PANEL_BRIDGE=y
 # CONFIG_DRM_CIRRUS_QEMU is not set
 # CONFIG_DRM_GM12U320 is not set
 # CONFIG_DRM_PANEL_MIPI_DBI is not set
+# CONFIG_DRM_PIXPAPER is not set
 # CONFIG_TINYDRM_HX8357D is not set
 # CONFIG_TINYDRM_ILI9163 is not set
 # CONFIG_TINYDRM_ILI9225 is not set
@@ -3524,6 +3540,7 @@ CONFIG_SND_USB_AUDIO_MIDI_V2=y
 # CONFIG_SND_USB_USX2Y is not set
 # CONFIG_SND_USB_CAIAQ is not set
 # CONFIG_SND_USB_US122L is not set
+# CONFIG_SND_USB_US144MKII is not set
 # CONFIG_SND_USB_6FIRE is not set
 # CONFIG_SND_USB_HIFACE is not set
 # CONFIG_SND_BCD2000 is not set
@@ -3539,6 +3556,7 @@ CONFIG_HID_BATTERY_STRENGTH=y
 CONFIG_HIDRAW=y
 # CONFIG_UHID is not set
 CONFIG_HID_GENERIC=m
+# CONFIG_HID_HAPTIC is not set
 
 #
 # Special HID drivers
@@ -3800,6 +3818,7 @@ CONFIG_USB_STORAGE=y
 # CONFIG_USB_APPLEDISPLAY is not set
 # CONFIG_APPLE_MFI_FASTCHARGE is not set
 # CONFIG_USB_LJCA is not set
+# CONFIG_USB_USBIO is not set
 # CONFIG_USB_SISUSBVGA is not set
 # CONFIG_USB_LD is not set
 # CONFIG_USB_TRANCEVIBRATOR is not set
@@ -4038,11 +4057,11 @@ CONFIG_RTC_DRV_CMOS=y
 # on-CPU RTC drivers
 #
 # CONFIG_RTC_DRV_FTRTC010 is not set
+# CONFIG_RTC_DRV_GOLDFISH is not set
 
 #
 # HID Sensor RTC drivers
 #
-# CONFIG_RTC_DRV_GOLDFISH is not set
 # CONFIG_DMADEVICES is not set
 
 #
@@ -4100,6 +4119,7 @@ CONFIG_ACPI_WMI=m
 # CONFIG_MXM_WMI is not set
 # CONFIG_NVIDIA_WMI_EC_BACKLIGHT is not set
 # CONFIG_XIAOMI_WMI is not set
+# CONFIG_REDMI_WMI is not set
 # CONFIG_GIGABYTE_WMI is not set
 # CONFIG_ACERHDF is not set
 # CONFIG_ACER_WIRELESS is not set
@@ -4433,7 +4453,6 @@ CONFIG_FS_STACK=y
 CONFIG_BUFFER_HEAD=y
 CONFIG_LEGACY_DIRECT_IO=y
 # CONFIG_EXT2_FS is not set
-# CONFIG_EXT3_FS is not set
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_USE_FOR_EXT2=y
 CONFIG_EXT4_FS_POSIX_ACL=y
@@ -4449,7 +4468,6 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_BTRFS_FS is not set
 # CONFIG_NILFS2_FS is not set
 # CONFIG_F2FS_FS is not set
-# CONFIG_BCACHEFS_FS is not set
 # CONFIG_ZONEFS_FS is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_EXPORTFS=y
@@ -4749,7 +4767,6 @@ CONFIG_CRYPTO_AKCIPHER=y
 CONFIG_CRYPTO_KPP2=y
 CONFIG_CRYPTO_KPP=y
 CONFIG_CRYPTO_ACOMP2=y
-CONFIG_CRYPTO_HKDF=y
 CONFIG_CRYPTO_MANAGER=y
 CONFIG_CRYPTO_MANAGER2=y
 # CONFIG_CRYPTO_USER is not set
@@ -4771,7 +4788,6 @@ CONFIG_CRYPTO_ECC=y
 CONFIG_CRYPTO_ECDH=y
 CONFIG_CRYPTO_ECDSA=y
 # CONFIG_CRYPTO_ECRDSA is not set
-CONFIG_CRYPTO_CURVE25519=y
 # end of Public-key cryptography
 
 #
@@ -4890,7 +4906,6 @@ CONFIG_CRYPTO_USER_API_AEAD=y
 #
 # Accelerated Cryptographic Algorithms for CPU (x86)
 #
-CONFIG_CRYPTO_CURVE25519_X86=y
 CONFIG_CRYPTO_AES_NI_INTEL=m
 # CONFIG_CRYPTO_BLOWFISH_X86_64 is not set
 # CONFIG_CRYPTO_CAMELLIA_X86_64 is not set
@@ -4984,10 +4999,8 @@ CONFIG_CRYPTO_LIB_UTILS=y
 CONFIG_CRYPTO_LIB_AES=y
 CONFIG_CRYPTO_LIB_ARC4=m
 CONFIG_CRYPTO_LIB_GF128MUL=m
-CONFIG_CRYPTO_LIB_BLAKE2S_GENERIC=y
-CONFIG_CRYPTO_ARCH_HAVE_LIB_CURVE25519=y
-CONFIG_CRYPTO_LIB_CURVE25519_GENERIC=y
-CONFIG_CRYPTO_LIB_CURVE25519_INTERNAL=y
+CONFIG_CRYPTO_LIB_BLAKE2S_ARCH=y
+CONFIG_CRYPTO_LIB_MD5=y
 CONFIG_CRYPTO_LIB_POLY1305_RSIZE=11
 CONFIG_CRYPTO_LIB_SHA1=y
 CONFIG_CRYPTO_LIB_SHA1_ARCH=y
@@ -4995,7 +5008,6 @@ CONFIG_CRYPTO_LIB_SHA256=y
 CONFIG_CRYPTO_LIB_SHA256_ARCH=y
 CONFIG_CRYPTO_LIB_SHA512=y
 CONFIG_CRYPTO_LIB_SHA512_ARCH=y
-# CONFIG_CRYPTO_BLAKE2S_X86 is not set
 # end of Crypto library routines
 
 CONFIG_XXHASH=y
@@ -5075,10 +5087,8 @@ CONFIG_OID_REGISTRY=y
 CONFIG_UCS2_STRING=y
 CONFIG_HAVE_GENERIC_VDSO=y
 CONFIG_GENERIC_GETTIMEOFDAY=y
-CONFIG_GENERIC_VDSO_TIME_NS=y
 CONFIG_GENERIC_VDSO_OVERFLOW_PROTECT=y
 CONFIG_VDSO_GETRANDOM=y
-CONFIG_GENERIC_VDSO_DATA_STORE=y
 CONFIG_FONT_SUPPORT=y
 CONFIG_FONTS=y
 CONFIG_FONT_8x8=y
@@ -5206,7 +5216,6 @@ CONFIG_HAVE_ARCH_KMSAN=y
 # Debug Oops, Lockups and Hangs
 #
 # CONFIG_PANIC_ON_OOPS is not set
-CONFIG_PANIC_ON_OOPS_VALUE=0
 CONFIG_PANIC_TIMEOUT=0
 CONFIG_HAVE_HARDLOCKUP_DETECTOR_BUDDY=y
 CONFIG_HARDLOCKUP_CHECK_TIMESTAMP=y
