--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 6.18.6 Kernel Configuration
+# Linux/x86 6.18.7 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (GCC) 15.2.1 20260103"
 CONFIG_CC_IS_GCC=y
@@ -1123,6 +1123,7 @@ CONFIG_READ_ONLY_THP_FOR_FS=y
 # CONFIG_NO_PAGE_MAPCOUNT is not set
 CONFIG_PAGE_MAPCOUNT=y
 CONFIG_PGTABLE_HAS_HUGE_LEAVES=y
+CONFIG_ASYNC_KERNEL_PGTABLE_FREE=y
 CONFIG_ARCH_SUPPORTS_HUGE_PFNMAP=y
 CONFIG_ARCH_SUPPORTS_PMD_PFNMAP=y
 CONFIG_ARCH_SUPPORTS_PUD_PFNMAP=y
